# compare_gcn

./: .gitignore  app.py  config.py  excel_exporter.py  gcn_validator.py  llm_client.py  main.py  main_refactored.py  pdf_utils.py  processed_cache.py  processed_files.db  processor.py  prompt.py  pyproject.toml  requirements.txt
